[workspace]
members = [
    "app",
    "common",
    "kusama",
    "polkadot",
    "rococo"
]

resolver = "2"

[workspace.package]
name = "claimeer"
version = "0.3.7"
license = "Apache-2.0"
repository = "https://github.com/turboflakes/claimeer"
authors = ["Paulo <paulo@turboflakes.io>"]
description = "Claimeer ― A dApp to easy lookup and claim child bounties for Polkadot and Kusama network."
edition = "2021"

[workspace.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.39"
wasm-logger = "0.2.0"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yew-hooks = "0.3.2"
yew-agent = "0.3.0"
subxt = { version = "0.37", default-features = false, features = ["unstable-light-client", "jsonrpsee", "web"], target_arch = "wasm32" }
futures = "0.3.28"
anyhow = "1.0.71"
strum = "0.17.1"
strum_macros = "0.17.1"
serde = "1.0.204"
serde_json = "1.0.96"
thiserror = "^1.0.24"
log = "0.4"
js-sys = "0.3.66"
gloo = "0.11.0"
plot_icon = "0.3.0"
num-format = "0.4"
rand = "0.8.5"
humantime = "2"
hex = "0.4.3"

[workspace.dependencies.web-sys]
version = "0.3"
# We need to enable the `DomRect` feature to use the
# `get_bounding_client_rect` method.
features = [
    "console",
    "HtmlElement",
    "HtmlInputElement",
    "MouseEvent",
    "FocusEvent",
    "DomRect",
    "EventTarget",
]
