[package]
name = "claimeer-app"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
yew-hooks = { workspace = true }
yew-agent = { workspace = true }
subxt = { workspace = true }
futures = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
js-sys = { workspace = true }
gloo = { workspace = true }
plot_icon = { workspace = true }
num-format = { workspace = true }
claimeer-common = { path = "../common" }
claimeer-workers = { path = "../workers" }
claimeer-kusama = { path = "../kusama" }
claimeer-kusama-people = { path = "../kusama_people" }
claimeer-polkadot = { path = "../polkadot" }
claimeer-polkadot-people = { path = "../polkadot_people" }
claimeer-rococo = { path = "../rococo" }

[dependencies.web-sys]
version = "0.3"
# We need to enable the `DomRect` feature to use the
# `get_bounding_client_rect` method.
features = [
    "HtmlElement",
    "HtmlInputElement",
    "MouseEvent",
    "FocusEvent",
    "DomRect",
    "EventTarget",
]