[package]
name = "claimeer-common"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
subxt = { workspace = true }
thiserror = { workspace = true }
yew = { workspace = true }
anyhow = { workspace = true }
js-sys = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
humantime = { workspace = true }
num-format = { workspace = true }
strum_macros = { workspace = true }
hex = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
rand = { workspace = true }