[package]
name = "claimit-kusama-people"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
subxt = { workspace = true }
log = { workspace = true }
async-recursion = { workspace = true }
claimit-common = { path = "../common" }