[package]
name = "claimit-paseo"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
subxt = { workspace = true }
log = { workspace = true }
yew = { workspace = true }
claimit-common = { path = "../common" }
claimit-paseo-people = { path = "../paseo_people" }