[package]
name = "claimeer-polkadot"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
subxt = { workspace = true }
log = { workspace = true }
yew = { workspace = true }
claimeer-common = { path = "../common" }
claimeer-polkadot-people = { path = "../polkadot_people" }