[package]
name = "claimit-polkadot"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
subxt = { workspace = true }
log = { workspace = true }
yew = { workspace = true }
tracing-wasm = { workspace = true }
tracing = { workspace = true }
claimit-common = { path = "../common" }
