[package]
name = "claimeer-rococo"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
subxt = { workspace = true }
log = { workspace = true }
yew = { workspace = true }
claimeer-common = { path = "../common" }
claimeer-rococo-people = { path = "../rococo_people" }