[package]
name = "claimeer-workers"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
yew-hooks = { workspace = true }
yew-agent = { workspace = true }
subxt = { workspace = true }
futures = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
js-sys = { workspace = true }
gloo = { workspace = true }
plot_icon = { workspace = true }
num-format = { workspace = true }
rand = { workspace = true }
claimeer-common = { path = "../common" }
claimeer-kusama = { path = "../kusama" }
claimeer-polkadot = { path = "../polkadot" }
claimeer-rococo = { path = "../rococo" }