[package]
name = "claimit-workers"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
yew-hooks = { workspace = true }
yew-agent = { workspace = true }
subxt = { workspace = true }
futures = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
js-sys = { workspace = true }
gloo = { workspace = true }
plot_icon = { workspace = true }
num-format = { workspace = true }
rand = { workspace = true }
claimit-common = { path = "../common" }
claimit-kusama-asset-hub = { path = "../kusama_asset_hub" }
claimit-kusama-people = { path = "../kusama_people" }
claimit-polkadot-asset-hub = { path = "../polkadot_asset_hub" }
claimit-polkadot-people = { path = "../polkadot_people" }
claimit-paseo-asset-hub = { path = "../paseo_asset_hub" }
claimit-paseo-people = { path = "../paseo_people" }
